--- a/package.json
+++ b/package.json
@@ -23,15 +23,17 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "celebrate": "^13.0.4",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.2.5",
+    "express-winston": "^4.0.5",
+    "helmet": "^4.4.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.5",
     "validator": "^13.5.2",
-    "dotenv": "^8.2.0",
-    "celebrate": "^13.0.4",
-    "winston": "^3.3.3",
-    "express-winston": "^4.0.5",
-    "jsonwebtoken": "^8.5.1"
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "eslint": "^7.14.0",
